# ReMirage

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  LICENSE  PROTO_FIX_SUMMARY.md  README.md  regenerate-proto.sh
.claude/: settings.local.json
benchmarks/: ebpf_latency.bt  fec_bench_test.go  go.mod  go.sum  gswitch_bench_test.go  highpressure_test.sh  load_test.sh  resource_bench_test.go
deploy/: docker-compose.dev.yml  docker-compose.os.yml
docs/: Mirage V2 编排内核设计草案.md  Mirage 功能确认与功能验证任务清单.md  Mirage 当前方向确认纪要-影子运营商.md  Mirage 抗DDoS架构整改清单.md  Mirage 运营前高频攻击面检查清单.md  MirageV2升级核心纪要-编排内核.md  MirageV2隐蔽控制面与DPI对抗承载架构.md  audit-remediation-checklist.md  audit-report.md  quic-go-vs-chrome-transport-params.md  release-readiness-traceability-index.md  外部零特征消除审计与整改清单.md  暗网基础设施防御力评价矩阵.md
mirage-cli/: README.md  build.sh  go.mod  main.go
mirage-gateway/: .dockerignore  Dockerfile  Dockerfile.alpine  Makefile  docker-compose.tmpfs.yml  go.mod  go.sum  quick-test.sh  rebuild-test.sh  test-billing.sh  test-quota.sh
mirage-os/: .env.example  DEPLOYMENT.md  Makefile  RELEASE_CHECKLIST.md  docker-compose.dev.yml  docker-compose.monero.yml  docker-compose.raft.yml  docker-compose.yaml  go.mod  go.sum
mirage-proto/: Makefile  README.md  control_command.proto  generate.sh  go.mod  go.sum  mirage.proto
phantom-client/: Dockerfile.chaos  Makefile  WINTUN_SOURCE.md  build.sh  go.mod  go.sum
scan-results-audit-2/: govulncheck-benchmarks.json  govulncheck-mirage-cli.json  scan-summary.json  (+9 more)
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  lib.rs  types.rs  websocket.rs
(+1255 files in other folders)
